<resources>
    <string name="app_name">Tuhm</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_delete">Apagar</string>
    <string name="action_share">Compartilhar</string>
    <string name="title_projects">Avaliações</string>
    <string name="title_new_project">Nova Avaliação</string>
    <string name="title_edit_project">Editar Avaliação</string>
    <string name="title_project">Avaliação</string>
    <string name="title_problem">Problema</string>
    <string name="title_heuristic">Heurística</string>
    <string name="title_report">Relatório</string>
    <string name="title_report_problem">Relatório do Problema</string>
    <string name="title_list_heuristics">Heurísticas</string>
    <string name="title_alert_delete_project">Deletar Avaliação</string>
    <string name="title_alert_delete_problem">Deletar Problema</string>
    <string name="title_alert_change_img_problem">Alterar Imagem</string>
    <string name="txt_title">Título</string>
    <string name="txt_description">Descrição</string>
    <string name="txt_gravity">Gravidade</string>
    <string name="txt_search">Pesquisar…</string>
    <string name="txt_create_project">Nova Avaliação criada.</string>
    <string name="txt_edit_project">A Avaliação foi alterada.</string>
    <string name="txt_delete_project">A Avaliação foi excluída.</string>
    <string name="txt_create_problem">Novo problema criado.</string>
    <string name="txt_edit_problem">O problema foi alterado.</string>
    <string name="txt_delete_problem">O problema foi excluído.</string>
    <string name="txt_violated_heuristics">Heurísticas Violadas:</string>
    <string name="txt_violated_heuristics_count">Heurísticas Violadas: %d</string>
    <string name="txt_violated_heuristics_report">Heurísticas Violadas</string>
    <string name="txt_definition">Definição</string>
    <string name="txt_explication">Explicação</string>
    <string name="txt_benefits">Benefícios</string>
    <string name="txt_problems">Problemas</string>
    <string name="txt_sub_heuristic">Sub-Heurísticas</string>
    <string name="txt_list_sub_heuristic">HU%d.%d - %s</string>
    <string name="txt_alert_delete_project">Você tem certeza que deseja deletar essa Avaliação?</string>
    <string name="txt_alert_delete_problem">Você tem certeza que deseja deletar esse problema?</string>
    <string name="txt_alert_change_img_problem">Você deseja alterar ou remover a imagem?</string>
    <string name="txt_problems_found">Problemas Encontrados</string>
    <string name="txt_gravity_absent">Inexistente: %d</string>
    <string name="txt_gravity_cosmetic">Problema Cosmético: %d</string>
    <string name="txt_gravity_small">Problema Pequeno: %d</string>
    <string name="txt_gravity_great">Problema Grande: %d</string>
    <string name="txt_gravity_catastrofic">Problema Catastrófico: %d</string>
    <string name="txt_sharing">Compartilhando…</string>
    <string name="error_title_project_null">Insira um nome para a sua Avaliação.</string>
    <string name="error_description_project_null">Insira uma descrição para a sua Avaliação.</string>
    <string name="error_description_problem_null">Insira uma descrição para o problema.</string>
    <string name="error_gravity_problem_null">Insira uma gravidade para o problema.</string>
    <string name="error_list_projects_empty">Ops! Você ainda não possui avaliações.</string>
    <string name="error_list_problems_empty">Ops! Você ainda não inseriu problemas cadastrados.</string>
    <string name="error_list_heuristics_empty">Ops! Você ainda não adicionou heurísticas.</string>
    <string name="error_report_heuristics_empty">Nenhuma heurística violada</string>
    <string name="error_search_heuristic_empty">Nenhuma heurística encontrada</string>
    <string name="cont_desc_btn_add_project">Adicionar uma nova análise</string>
    <string name="cont_desc_btn_add_problem">Adicionar um novo problema</string>
    <string name="cont_desc_img_list_heuristic">Mostrar ou ocultar sub-heurísticas</string>
    <string name="cont_desc_btn_detail_heuristic">Mostrar detalhes da heurística %d</string>
    <string name="cont_desc_img_problem">Imagem do problema</string>
    <string name="btn_save">salvar</string>
    <string name="btn_cancel">cancelar</string>
    <string name="btn_report">relatório</string>
    <string name="btn_edit">editar</string>
    <string name="btn_change">alterar</string>
    <string name="btn_add">adicionar</string>
    <string name="btn_details">detalhes</string>
    <string name="btn_delete">deletar</string>
    <string name="btn_remove">remover</string>
    <string-array name="list_gravity">
        <item>Inexistente</item>
        <item>Problema Cosmético</item>
        <item>Problema Pequeno</item>
        <item>Problema Grande</item>
        <item>Problema Catastrófico</item>
    </string-array>
    <string-array name="list_title_heuristic">
        <item>HU1 – Visibilidade do Status do Aplicativo</item>
        <item>HU2 – Correspondência entre o Aplicativo e o Mundo Real</item>
        <item>HU3 – Controle do Usuário e Liberdade</item>
        <item>HU4 – Consistência e Padrões</item>
        <item>HU5 – Prevenção de Erros</item>
        <item>HU6 – Minimização do Cognitive Load do Usuário</item>
        <item>HU7 – Customização e Atalhos</item>
        <item>HU8 - Eficiência de Uso e Desempenho</item>
        <item>HU9 – Design Estético e Minimalista</item>
        <item>HU10 – Ajuda ao Usuário para Reconhecer, Diagnosticar e Recuperar-se de Erros</item>
        <item>HU11 – Ajuda e Documentação</item>
        <item>HU12 – Interação Agradável e Respeitosa com o Usuário</item>
        <item>HU13 – Privacidade</item>
    </string-array>
    <string-array name="list_definition_heuristic">
        <item>O aplicativo deve manter o usuário informado sobre todos os processos, interações do usuário com o sistema e mudanças de estado dentro de um período de tempo razoável.</item>
        <item>O aplicativo deve falar o idioma dos usuários e não em termos técnicos de sistema. O aplicativo deve exibir as informações de forma familiar ao usuário (de acordo com o contexto externo em que a aplicação está inserida), seguindo uma ordem lógica e natural.</item>
        <item>O aplicativo deve permitir que o usuário desfaça e refaça suas ações para uma navegação clara e deve fornecer ao usuário uma opção de saída de estados indesejáveis do sistema.</item>
        <item>O aplicativo deve seguir as convenções estabelecidas, permitindo o usuário realizar as suas tarefas de maneira familiar, padronizada e consistente.</item>
        <item>Elimine as condições propensas a erros e apresente ao usuário uma opção de confirmação com informações adicionais antes dele se comprometer com a ação.</item>
        <item>O aplicativo deve oferecer objetos visíveis, ações e opções para evitar que os usuários tenham que memorizar informações de uma interface para a outra.</item>
        <item>O aplicativo deve fornecer opções de configurações básicas e avançadas, de modo a permitir a criação e personalização de atalhos para ações frequentes.</item>
        <item>O dispositivo deve ser capaz de carregar e exibir a informação em um período de tempo razoável e minimizar as etapas necessárias para executar uma tarefa (número de etapas a serem tomadas pelo usuário para atingir uma meta). Animações e transições devem ser exibidas sem problemas e de forma fluida.</item>
        <item>O aplicativo deve evitar exibir informações indesejadas que sobrecarreguem a tela.</item>
        <item>O aplicativo deve exibir mensagens de erro em uma linguagem familiar para o usuário, indicando com precisão o problema e sugerindo uma solução construtiva.</item>
        <item>O aplicativo deve fornecer documentação e ajuda fáceis de se encontrar, centrado na tarefa atual do usuário, e indicar passos concretos a serem seguidos para execução das funcionalidades do aplicativo.</item>
        <item>O dispositivo deve fornecer uma interação agradável com o usuário, de forma com que este não se sinta desconfortável ao utilizar a aplicação.</item>
        <item>O aplicativo deve proteger os dados confidenciais do usuário.</item>
    </string-array>
</resources>