<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.HeuristicFragment">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            tools:text="HU1 – Visibilidade do Status do Aplicativo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_definition"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/material_on_surface_emphasis_medium" />

        <TextView
            android:id="@+id/txt_definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="O aplicativo deve manter o usuário informado sobre todos os processos, inte-rações do usuário com o sistema e mudanças de estado dentro de um período de temporazoável." />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_explication"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/material_on_surface_emphasis_medium" />

        <TextView
            android:id="@+id/txt_explication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="O aplicativo deve manter o usuário informado sobre todos os processos, inte-rações do usuário com o sistema e mudanças de estado dentro de um período de temporazoável." />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_benefits"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/material_on_surface_emphasis_medium" />

        <TextView
            android:id="@+id/txt_benefits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="O aplicativo deve manter o usuário informado sobre todos os processos, inte-rações do usuário com o sistema e mudanças de estado dentro de um período de temporazoável." />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_problems"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/material_on_surface_emphasis_medium" />

        <TextView
            android:id="@+id/txt_problems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="O aplicativo deve manter o usuário informado sobre todos os processos, inte-rações do usuário com o sistema e mudanças de estado dentro de um período de temporazoável." />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_sub_heuristic"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/material_on_surface_emphasis_medium" />
    </LinearLayout>

</ScrollView>